
What's New in Pylint 2.13.0?
============================
Release date: TBA

..
  Put new features here and also in 'doc/whatsnew/2.13.rst'


..
  Insert your changelog randomly, it will reduce merge conflicts
  (Ie. not necessarily at the end)


What's New in Pylint 2.12.2?
============================
Release date: TBA

..
  Put bug fixes that should not wait for a new minor version here

..
  Insert your changelog randomly, it will reduce merge conflicts
  (Ie. not necessarily at the end)


What's New in Pylint 2.12.1?
============================
Release date: 2021-11-25

* Require Python ``3.6.2`` to run pylint.

  Closes #5065


What's New in Pylint 2.12.0?
============================
Release date: 2021-11-24

* Upgrade astroid to 2.9.0

  Closes #4982

* Add ability to add ``end_line`` and ``end_column`` to the ``--msg-template`` option.
  With the standard ``TextReporter`` this will add the line and column number of the
  end of a node to the output of Pylint. If these numbers are unknown, they are represented
  by an empty string.

* Introduced primer tests and a configuration tests framework. The helper classes available in
  ``pylint/testutil/`` are still unstable and might be modified in the near future.

  Closes #4412 #5287

* Fix ``install graphiz`` message which isn't needed for puml output format.

* ``MessageTest`` of the unittest ``testutil`` now requires the ``confidence`` attribute
  to match the expected value. If none is provided it is set to ``UNDEFINED``.

* ``add_message`` of the unittest ``testutil`` now actually handles the ``col_offset`` parameter
  and allows it to be checked against actual output in a test.

* Fix a crash in the ``check_elif`` extensions where an undetected if in a comprehension
  with an if statement within a f-string resulted in an out of range error. The checker no
  longer relies on counting if statements anymore and uses known if statements locations instead.