@@ -22,6 +22,9 @@ Release date: TBA
 ..
   Put bug fixes that should not wait for a new minor version here
 
+* Fixed a false positive for ``unused-import`` where everything
+  was not analyzed properly inside typing guards.
+
 ..
   Insert your changelog randomly, it will reduce merge conflicts
   (Ie. not necessarily at the end)
